<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Text">My Nanodegree Apps !!!</string>
    <string name="Button_one">Spotify Streamer</string>
    <string name="Button_two">Scores App</string>
    <string name="Button_three">Library App</string>
    <string name="Button_four">Build It Bigger</string>
    <string name="Button_five">XYZ Reader</string>
    <string name="Button_six">My Own App</string>
</resources>
