<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/Title"
        android:text="@string/Text"
        android:layout_margin="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_one"
        android:background="@color/Orange"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/Button_one"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_two"
        android:background="@color/Orange"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:id="@+id/Button_two"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_three"
        android:id="@+id/Button_three"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:background="@color/Orange"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_four"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:id="@+id/Button_four"
        android:background="@color/Orange"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_five"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/Button_five"
        android:textColor="@android:color/white"
        android:background="@color/Orange"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/Button_six"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/Button_six"
        android:textColor="@android:color/white"
        android:background="@color/Pink"
        android:layout_height="wrap_content" />


</LinearLayout>
</ScrollView>